change and add func

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <p>=</p>
                     <p class="convers-valute__value">0</p>
                     <select name="valute" id="valute-id" class="valute-id">
-                        <option value="valute-for-change">Выберите валюту</option>
+                        <option value="valute-for-change" selected>Выберите валюту</option>
                     </select>
                 </div>
             </div>
@@ -34,7 +34,6 @@
     </section>
 </body>
 <!-- <script src="CBexchange.js"></script> -->
-<!-- <script src="exchangeRate.js"></script> -->
 <script src="new.js"></script>
 
 </html>
